--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lint": "tsdx lint src test",
     "build": "tsdx build",
     "start": "tsdx watch",
-    "test": "tsdx test"
+    "test": "tsdx test",
+    "publish": "./publish.sh"
   },
   "dependencies": {
     "big.js": "^5.2.2",
