--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "module": "dist/sdk.esm.js",
   "scripts": {
     "lint": "tsdx lint src test",
+    "lint:fix": "tsdx lint src test --fix",
     "build": "tsdx build",
     "start": "tsdx watch",
     "test": "tsdx test",
@@ -53,8 +54,11 @@
     "node": ">=10"
   },
   "prettier": {
-    "printWidth": 160,
     "semi": true,
-    "singleQuote": true
+    "singleQuote": true,
+    "trailingComma": "all",
+    "tabWidth": 2,
+    "printWidth": 160,
+    "arrowParens": "avoid"
   }
 }
