--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@plasma-fi/sdk",
-  "license": "MIT",
-  "version": "1.0.4",
   "description": "🛠 An SDK for building dapp on PlasmaSwap.",
+  "version": "1.0.5",
+  "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
@@ -15,13 +15,16 @@
     "plasma.finance"
   ],
   "module": "dist/sdk.esm.js",
+  "engines": {
+    "node": ">=10"
+  },
   "scripts": {
+    "start": "tsdx watch",
+    "build": "tsdx build",
+    "test": "tsdx test",
     "lint": "tsdx lint src test",
     "lint:fix": "tsdx lint src test --fix",
-    "build": "tsdx build",
-    "start": "tsdx watch",
-    "test": "tsdx test",
-    "pub": "./publish.sh"
+    "publish": "./publish.sh"
   },
   "dependencies": {
     "big.js": "^5.2.2",
@@ -49,9 +52,6 @@
     "babel-plugin-transform-jsbi-to-bigint": "^1.3.1",
     "tsdx": "^0.14.1",
     "version-bump-prompt": "^6.1.0"
-  },
-  "engines": {
-    "node": ">=10"
   },
   "prettier": {
     "semi": true,
