--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@plasma-fi/sdk",
   "description": "🛠 An SDK for building dapp on PlasmaSwap.",
-  "version": "2.4.9",
+  "version": "2.4.10",
   "license": "MIT",
   "author": "itsib.su@gmail.com",
   "main": "dist/index.js",
@@ -42,6 +42,7 @@
     "@ethersproject/bignumber": "^5.0.0-beta",
     "@ethersproject/bytes": "^5.0.0-beta",
     "@ethersproject/contracts": "^5.0.0-beta",
+    "@ethersproject/keccak256": "^5.0.0-beta",
     "@ethersproject/networks": "^5.0.0-beta",
     "@ethersproject/providers": "^5.0.0-beta",
     "@ethersproject/solidity": "^5.0.0-beta"
@@ -51,6 +52,7 @@
     "@ethersproject/bignumber": "^5.0.2",
     "@ethersproject/bytes": "^5.4.0",
     "@ethersproject/contracts": "^5.0.2",
+    "@ethersproject/keccak256": "^5.5.0",
     "@ethersproject/networks": "^5.0.2",
     "@ethersproject/providers": "^5.4.5",
     "@ethersproject/solidity": "^5.0.2",
