--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@plasma-fi/sdk",
   "description": "🛠 An SDK for building dapp on PlasmaSwap.",
-  "version": "2.6.2-beta.1",
+  "version": "2.6.2-beta.2",
   "license": "MIT",
   "author": "itsib.su@gmail.com",
   "main": "dist/index.js",
@@ -59,15 +59,8 @@
     "@types/big.js": "^4.0.5",
     "@types/jest": "^24.0.25",
     "babel-plugin-transform-jsbi-to-bigint": "^1.3.1",
+    "prettier": "2.4.1",
     "tsdx": "^0.14.1",
     "version-bump-prompt": "^6.1.0"
-  },
-  "prettier": {
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "all",
-    "tabWidth": 2,
-    "printWidth": 180,
-    "arrowParens": "avoid"
   }
 }
