--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@plasma-fi/sdk",
   "description": "🛠 An SDK for building dapp on PlasmaSwap.",
-  "version": "2.6.2-beta.12",
+  "version": "2.6.2",
   "license": "MIT",
   "author": "itsib.su@gmail.com",
   "main": "dist/index.js",
